gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/goto1.d
version https://git-lfs.github.com/spec/v1
oid sha256:94ba0ca657669587b46cf7b623fcb78cd1b172355f0dcb740f19c5df0f727a14
size 263
